--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvbcBgb/3FzNIwe8MHdx1y",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMPggvsVNorPceyoFkxRKb3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -773,7 +774,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 463
         },
         "id": "6QcUx9UxVaSl",
         "outputId": "7a523283-f565-4e4e-8e81-71987141f3a6"
@@ -1498,11 +1499,11 @@
         "train_data_custom, test_data_custom"
       ],
       "metadata": {
-        "id": "mLafwliFNrXH",
-        "outputId": "547789f5-6497-4ee8-f637-f7afe3c596fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mLafwliFNrXH",
+        "outputId": "547789f5-6497-4ee8-f637-f7afe3c596fd"
       },
       "execution_count": 52,
       "outputs": [
@@ -1521,9 +1522,71 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(len(train_data_custom), len(test_data_custom))\n",
+        "print(train_data_custom.classes)\n",
+        "print(train_data_custom.class_to_idx)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YovLacMFPwrJ",
+        "outputId": "ec6d0e99-2595-446d-8464-657c3ede5e5f"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "225 75\n",
+            "['pizza', 'steak', 'sushi']\n",
+            "{'pizza': 0, 'steak': 1, 'sushi': 2}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(train_data), len(test_data)"
+      ],
+      "metadata": {
+        "id": "OV5Yy3aMQqsG",
+        "outputId": "434b4e35-9874-4ecd-c79f-97d817170d25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(225, 75)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Funtion displays random images"
+      ],
+      "metadata": {
+        "id": "D8y8x2lvRvKu"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YovLacMFPwrJ"
+        "id": "B0-zd38ZRMFF"
       },
       "execution_count": null,
       "outputs": []
